--- a/lib/js/plug/popimg_jstpl/popimg.all.scss
+++ b/lib/js/plug/popimg_jstpl/popimg.all.scss
@@ -30,19 +30,20 @@
     right: 0;
     bottom: 0;
     left: 0;
-    transition: all .3s ease-in-out;
+    transition: all .35s ease-in-out;
   }
 
   .popimg-modal{
     display: none;
     position: fixed;
     z-index: 101;
-    transition: opacity .5s ease, scale .5s ease;
+    transition: opacity .8s ease, scale .8s ease;
     opacity: 0;
 
     &.animate-out{
       transform: scale(5);
-      transition: all .2s cubic-bezier(0.4, 0, 1, 1);
+      opacity: 0;
+      transition: all .28s cubic-bezier(0.4, 0, 1, 1);
     }
     &.animate-in{
       opacity: 1;
