--- a/lib/js/plug/popimg_jstpl/popimg.all.scss
+++ b/lib/js/plug/popimg_jstpl/popimg.all.scss
@@ -36,7 +36,7 @@
   .popimg-modal{
     display: none;
     position: fixed;
-    z-index: 101;
+    z-index: 102;
     transition: opacity .8s ease, scale .8s ease;
     opacity: 0;
 
@@ -44,6 +44,10 @@
       transform: scale(5);
       opacity: 0;
       transition: all .28s cubic-bezier(0.4, 0, 1, 1);
+    }
+    &.fade-out{
+      opacity: 0!important;
+      transition: opacity .28s ease;
     }
     &.animate-in{
       opacity: 1;
@@ -115,6 +119,45 @@
       }
     }
 
+  }
+
+  .popimg-switcher-row{
+    display: none;
+    position: fixed;
+    z-index: 101;
+    width: 100%;
+    height: 60px;
+    left: 0;
+    top: 50%;
+    margin-top:-30px;
+
+    .popimg-switcher{
+      font-style: normal;
+      width: 54px;
+      height: 60px;
+      line-height: 60px;
+      display: inline-block;
+      background-color: rgba(255, 255, 255, .3);
+      cursor: pointer;
+      font-size: 30px;
+      font-weight: bold;
+      text-align: center;
+      color: rgba(255, 255, 255, .8);
+      position: absolute;
+      transition: all .3s ease-in-out;
+      border-radius: 2px;
+
+      &.popimg-prev{
+        left: 0;
+      }
+
+      &.popimg-next{
+        right: 0;
+      }
+    }
+    .popimg-switcher:hover{
+      background-color: rgba(255, 255, 255, .5);
+    }
   }
 }
 
