--- a/src/js/plug/popimg/popimg.scss
+++ b/src/js/plug/popimg/popimg.scss
@@ -14,18 +14,22 @@
         transition: all .35s ease-in-out;
     }
 
-    .popimg-modal{
-        display: none;
-        position: fixed;
-        z-index: 101;
-        transition: opacity .8s ease, scale .8s ease;
-        opacity: 0;
+  .popimg-modal{
+    display: none;
+    position: fixed;
+    z-index: 102;
+    transition: opacity .8s ease, scale .8s ease;
+    opacity: 0;
 
         &.animate-out{
             transform: scale(5);
             opacity: 0;
             transition: all .28s cubic-bezier(0.4, 0, 1, 1);
-        }
+    }
+    &.fade-out{
+      opacity: 0!important;
+      transition: opacity .28s ease;
+    }
         &.animate-in{
             opacity: 1;
             transition-delay: .5s;
@@ -121,14 +125,15 @@
             color: rgba(255, 255, 255, .8);
             position: absolute;
             transition: all .3s ease-in-out;
-            border-radius: 2px;
 
             &.popimg-prev{
-                left: 0;
+                left: -100%;
+                border-radius: 0 2px 2px 0;
             }
 
             &.popimg-next{
-                right: 0;
+                right: -100%;
+                border-radius: 2px 0 0 2px;
             }
         }
         .popimg-switcher:hover{
