--- a/src/js/plug/popimg/popimg.scss
+++ b/src/js/plug/popimg/popimg.scss
@@ -11,7 +11,7 @@
       right: 0;
       bottom: 0;
       left: 0;
-      transition: all .35s ease-in-out;
+      transition: all .3s ease-in-out;
   }
 
   .popimg-loader{
@@ -49,20 +49,19 @@
         opacity: 0;
 
         &.animate-out{
-            transform: scale(5);
+            //transform: scale(5);
             opacity: 0;
-            transition: all .28s cubic-bezier(0.4, 0, 1, 1);
+            transition: all .25s ease;
         }
         &.fade-out{
             opacity: 0!important;
             transition: opacity .1s ease;
         }
-        &.animate-in-delay{
-            opacity: 1;
-            transition-delay: .5s;
-        }
         &.animate-in{
           opacity: 1;
+        }
+        &.animate-in-delay{
+            transition-delay: .02s;
         }
         .modal_content{
             position: relative;
@@ -172,7 +171,15 @@
 }
 
 .popimg-show .popimg-overlay{
-    opacity: .85;
+    opacity: .65;
+}
+.popimg-show .popimg-panel{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 110;
 }
 
 @keyframes rotate {
