--- a/src/js/plug/popimg/popimg.scss
+++ b/src/js/plug/popimg/popimg.scss
@@ -139,6 +139,7 @@
         top: 50%;
         margin-top:-25px;
         transition: all .25s ease-in-out;
+        overflow: hidden;
 
         .popimg-switcher{
             font-style: normal;
